@@ -9,10 +9,7 @@ records in bug reports and recreate the problem on their system without having
 access to the affected hardware.
 
 The ``UMockdevTestbed`` class builds a temporary sandbox for mock devices.
-Right now this covers sysfs, uevents, basic support for /dev devices, and
-recording/mocking usbdevfs (for PtP/MTP devices) and evdev (touch pads, Wacom
-tablets, etc.) ioctls, but other aspects will be added in the future. You can
-add a number of devices including arbitrary sysfs attributes and udev
+You can add a number of devices including arbitrary sysfs attributes and udev
 properties, and then run your software in that test bed that is independent of
 the actual hardware it is running on.  With this you can simulate particular
 hardware in virtual environments up to some degree, without needing any
@@ -21,6 +18,23 @@ particular privileges or disturbing the whole system.
 You can use this from the command line, and a wide range of programming
 languages (C, Vala, and everything which supports gobject-introspection, such
 as JavaScript or Python).
+
+Right now umockdev supports the following features:
+
+ * Emulation of arbitrary sysfs devices, attributes, and udev properties
+
+ * Synthesis of arbitrary uevents
+
+ * Emulation of /dev device nodes; they look just like the original real
+   device (i. e. stat() delivers a block/char device with appropriate
+   major/minor), but are backed by a PTY (for terminal devices) or a plain file
+   (for everything else) by default. You can manually create other kinds of
+   fake devices in your tests, too.
+
+ * Recording and replay of usbdevfs (for PtP/MTP devices) and evdev (touch pads,
+   Wacom tablets, etc.) ioctls
+
+Other aspects and functionality will be added in the future as use cases arise.
 
 Component overview
 ==================
