@@ -3,6 +3,10 @@
 - Emulate SUBSYSTEM=tty mocked device nodes as PTYs instead of plain files, so
   that they behave tty-like and respond to the relevant ioctls.
   (first part of issue #9)
+- Add new method umockdev_testbed_get_dev_fd() to get the master end file
+  descriptor for simulated tty devices (and possibly other kinds of devices in
+  the future), so that a test suite can communicate with clients that connect
+  to the simulated tty device node. (second part of issue #9)
 
 0.2.11 (2013-07-03)
 -------------------
